sngl-new page add

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -254,4 +254,5 @@
 @import './pages/leisure-page.scss';
 @import './pages/documents.scss';
 @import './pages/news.scss';
+@import './pages/single-news.scss';
 
