--- a/src/assets/styles/standart-elements.scss
+++ b/src/assets/styles/standart-elements.scss
@@ -134,6 +134,7 @@ body {
     }
     &-list {
         display: flex;
+        max-width: 100%;
     }
     &-item:not(:first-child):before {
         content: '';
