webcam page add

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -255,4 +255,5 @@
 @import './pages/documents.scss';
 @import './pages/news.scss';
 @import './pages/single-news.scss';
+@import './pages/web-camera.scss';
 
