--- a/src/pug/includes/mixins.pug
+++ b/src/pug/includes/mixins.pug
@@ -1,6 +1,6 @@
 
 mixin svg(icon)
-    svg(class="icon--"+ icon + ""  role="presentation")&attributes(attributes)
+    svg(class="icon--"+ icon + "" )&attributes(attributes)
       use(xlink:href="#icon-"+ icon + "")
 
 mixin img(src)
