aeroview page add

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -256,4 +256,5 @@
 @import './pages/news.scss';
 @import './pages/single-news.scss';
 @import './pages/web-camera.scss';
+@import './pages/aeroview.scss';
 
