--- a/src/pug/includes/popup.pug
+++ b/src/pug/includes/popup.pug
@@ -4,6 +4,6 @@
 .menu-popup(data-menu-popup-block block-popup)
   button(type="button" data-parrent-node-menu) close
   h2 menu
-  - var readyPages = ['ctc','sfera','location','build-progress','developer','work-page','leisure-page','gallery','about','documents','news','single-news','web-camera']
+  - var readyPages = ['ctc','sfera','location','build-progress','developer','work-page','leisure-page','gallery','about','documents','news','single-news','web-camera','aeroview']
   each val in readyPages
     a(href=val+'.html') #{val} <br>
