values slider start

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -257,4 +257,5 @@
 @import './pages/single-news.scss';
 @import './pages/web-camera.scss';
 @import './pages/aeroview.scss';
+@import './pages/values.scss';
 
