values slider continuing develop

--- a/src/pug/pages/values.pug
+++ b/src/pug/pages/values.pug
@@ -11,7 +11,29 @@ block variable
         link: pagesLink[0].about
       }
     ]
-  
+    var valueOpening = [
+      ['values-opening-01','Відкритиість місту'],
+      ['values-opening-02','Відкритиість людям'],
+      ['values-opening-03','Відкритість інноваціям'],
+    ]
+    var valuePoly = [
+      ['values-poly-01','Головне – це функція, яка визначає форму'],
+      ['values-poly-02','Функціональна різноманітність, яка враховує інтереси усіх стейкхолдерів'],
+      ['values-poly-03','Гармонія між корпоративними та публічними просторами'],
+    ]
+    var valueSocial = [
+      ['values-social-01','KYЇVPROEKT – це Будинок Культури. Нової Культури'],
+      ['values-social-02','Ми підтримуємо найбільш талановиті та новаторські проєкти в галузі архітектури, мистецтва, дизайну та технологій'],
+      ['values-social-03','Ми формуємо надихаючий контекст для народження ідей, які змінюють майбутнє'],
+    ]
+    var valueSymergy = [
+      ['values-synergy-01','Об\'єднуємо таланти заради позитивної трансформації Києва'],
+      ['values-synergy-02','KYЇVPROEKT – це экосистема, яку усі стейкхолдери створюють разом'],
+      ['values-synergy-03','Архітектура, дизайн, мистецтво та технології, доповнюючи один одне, створюють нову життєву філософію'],
+
+    ]
+    //values-social-02
+    //values-poly-01
 block meta
   title= title_page
   meta(name='description', content='')
@@ -29,16 +51,34 @@ block content
   .page-part
     .slider(data-slider)
       .slide(data-slide).active
-        span 01
+        span.slider__number 01
+        ul.slide__content 
+          li Соціальна значимість
+          each val in valueSocial
+            +infoItem(val[1], val[0], '')
         img(src="./assets/images/values/values-slide-image01.jpg")
       .slide(data-slide)
-        span 02
+        span.slider__number 02
+        ul.slide__content 
+          li ПОЛІФУНКЦІОНАЛЬНІСТЬ
+          each val in valuePoly
+            +infoItem(val[1], val[0], '')
         img(src="./assets/images/values/values-slide-image02.jpg")
       .slide(data-slide)
-        span 03
+        span.slider__number 03
+        ul.slide__content
+          li ВІДКРИТІСТЬ
+          each val in valueOpening
+            +infoItem(val[1], val[0], '')
         img(src="./assets/images/values/values-slide-image03.jpg")
       .slide(data-slide)
-        span 04
+        span.slider__number 04
+        ul.slide__content
+          li Синергія
+          each val in valueSymergy
+            +infoItem(val[1], val[0], '')
+        
+
         img(src="./assets/images/values/values-slide-image04.jpg")
 block footer
   include ../includes/footer.pug
