--- a/src/assets/styles/pages/values.scss
+++ b/src/assets/styles/pages/values.scss
@@ -1,10 +1,11 @@
 .slider {
+  --js-transition:1.5s;
   display: flex;
   position: absolute;
   left: 0;
   top: var(--header-h);
   width: 100vw;
-  height: 100vh;
+  height: calc(100vh - var(--header-h) - 114px);
   .slide.active {
     width: 100% ;
     pointer-events: none;
@@ -18,7 +19,7 @@
     width: 100%;
     height: 100%;
     opacity: 1;
-    transition: .3s;
+    transition: 1.5s;
   }
   .slide.active:after {
     opacity: 0;
@@ -28,6 +29,26 @@
     height: 100%;
     overflow: hidden;
     position: relative;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    
+  }
+  .info-list-item  {
+    margin-left: 0;
+    margin-right: 0;
+    max-width: none;
+  }
+  .slide__content {
+    opacity: 0;
+    transition: .5s ease-in-out;
+    padding-left: 150px;
+    pointer-events: none;
+    min-width: 50vw;
+  }
+  .slide.active .slide__content {
+    opacity: 1;
   }
   img{
     position: absolute;
@@ -36,21 +57,25 @@
     top: 0;
     height: 100%;
     object-fit: cover;
-    z-index: 0;
+    z-index: -1;
+    object-position: left;
   }
-  span {
-    position: relative;
+  &__number {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
     z-index: 1;
     font-weight: 500;
     font-size: 42px;
     line-height: 42px;
     color: #fff;
-    transition: .2s;
+    transition: var(--js-transition);
     transition-delay: 0;
   }
-  .active span {
+  .active &__number {
     font-size: 96px;
     line-height: 80px;
-    transition-delay: 1s;
+    font-weight: normal;
   }
 }
