add auto interval an styling desktop content of values slider

--- a/src/pug/components/seo-block/seo-block.scss
+++ b/src/pug/components/seo-block/seo-block.scss
@@ -7,6 +7,9 @@
   padding-left: 20%;
   padding-right: 20%;
   background: #fff;
+  max-width: 1070px;
+  margin-left: auto;
+  margin-right: auto;
   &__decor {
     position: absolute;
     left: 0;
