--- a/src/assets/styles/pages/values.scss
+++ b/src/assets/styles/pages/values.scss
@@ -1,11 +1,18 @@
+body[id*='values']{
+
+}
+
 .slider {
   --js-transition:1.5s;
   display: flex;
-  position: absolute;
+  // position: absolute;
   left: 0;
+  margin-left: calc(var(--page-side-fields) * -1);  
+  // Высота тайтла страницы и хлебных крошек
+      margin-top: calc((var(--header-h) + 60px + 70px) * -1);
   top: var(--header-h);
   width: 100vw;
-  height: calc(100vh - var(--header-h) - 114px);
+  height: calc(100vh - var(--header-h));
   .slide.active {
     width: 100% ;
     pointer-events: none;
@@ -39,6 +46,8 @@
     margin-left: 0;
     margin-right: 0;
     max-width: none;
+    max-width: 350px;
+    border-color: rgba(0, 0, 0, 0.1);
   }
   .slide__content {
     opacity: 0;
@@ -46,6 +55,7 @@
     padding-left: 150px;
     pointer-events: none;
     min-width: 50vw;
+    
   }
   .slide.active .slide__content {
     opacity: 1;
@@ -53,9 +63,9 @@
   img{
     position: absolute;
     left: 0;
-    width: 100%;
+    min-width: 100vw;
     top: 0;
-    height: 100%;
+    min-height: 100vh;
     object-fit: cover;
     z-index: -1;
     object-position: left;
@@ -77,5 +87,16 @@
     font-size: 96px;
     line-height: 80px;
     font-weight: normal;
+  }
+  @include to(575px){
+    flex-wrap: wrap;
+    .slide {
+      width: 100%;
+      height: 60px;
+    }
+    .slide.active {
+      height: 100%;
+      width: auto;
+    }
   }
 }
