--- a/src/assets/styles/pages/values.scss
+++ b/src/assets/styles/pages/values.scss
@@ -1,8 +1,11 @@
 body[id*='values']{
 
 }
+body[id*='values']{
 
-.slider {
+}
+
+.values-slider {
   --js-transition:1.5s;
   display: flex;
   // position: absolute;
@@ -90,13 +93,51 @@ body[id*='values']{
   }
   @include to(575px){
     flex-wrap: wrap;
+    margin-top: 0;
+    height: auto;
     .slide {
       width: 100%;
-      height: 60px;
+      height: 30px;
+      align-items: flex-start;
+    }
+    .slide img {
+      min-width: auto;
+      min-height: 75vh;
+      object-position: 40%;
     }
     .slide.active {
-      height: 100%;
-      width: auto;
+      height: 75vh;
+      width: 100%;
+    }
+    .slide__content {
+      padding-left: 14px;
+    }
+    &__number {
+      font-size: 24px;
+    line-height: 100%;
+    z-index: 1;
+    }
+    .active &__number {
+      font-size: 48px;
+      line-height: 100%;
+    }
+    .info-list-item {
+      padding: 10px 0;
+    }
+    .slide__content {
+      padding-top: 30px;
+      padding-bottom: 40px;
+      padding-right: 20%;
+      position: relative;
+      z-index: 1;
+    }
+    .subtitle-small{
+      margin-bottom: 20px;
+    }
+    .active.slide:after {
+        background: linear-gradient(90deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%);
+        opacity: 1;
+        z-index: 0;
     }
   }
 }
