--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,6 +16,7 @@
 @import './header';
 @import './header-dron';
 @import './footer';
+@import './footer-dron';
 @import './404';
 @import './loader';
 
