--- a/src/assets/styles/pages/news.scss
+++ b/src/assets/styles/pages/news.scss
@@ -134,5 +134,9 @@
     .icon-title-decor .subtitle{
       padding-left: 10px;
     }
+    &__link {
+      padding-top: 20px;
+      padding-bottom: 20px;
+    }
   }
 }
