--- a/src/assets/styles/pages/sfera.scss
+++ b/src/assets/styles/pages/sfera.scss
@@ -3,6 +3,15 @@
   margin-top: 70px;
   @include to(575px){
     margin-top: 35px;
+    .icon-title-decor {
+      margin-bottom: 10px;
+      .subtitle{
+        padding-right: 10px;
+      }
+      .decor {
+        display: none;
+      }
+    }
   }
 }
 .sfera-grid-block{
@@ -97,6 +106,7 @@
       img{
         grid-area: 1/1/1/3;
         height: 100%;
+        max-height: 320px;
       }
     }
     &__right2>*:not(img){
