--- a/src/pug/includes/popup.pug
+++ b/src/pug/includes/popup.pug
@@ -2,8 +2,9 @@
   button(type="button" data-parrent-node-popup) close
   h2 звонок
 .menu-popup(data-menu-popup-block block-popup)
-  button(type="button" data-parrent-node-menu) close
-  h2 menu
-  - var readyPages = ['ctc','sfera','location','build-progress','developer','work-page','leisure-page','gallery','about','documents','news','single-news','web-camera','aeroview','values']
-  each val in readyPages
-    a(href=val+'.html') #{val} <br>
+  //- button(type="button" data-parrent-node-menu) close
+  //- h2 menu
+  //- - var readyPages = ['ctc','sfera','location','build-progress','developer','work-page','leisure-page','gallery','about','documents','news','single-news','web-camera','aeroview','values']
+  //- each val in readyPages
+  //-   a(href=val+'.html') #{val} <br>
+  include menu.pug
