--- a/src/assets/styles/header-dron.scss
+++ b/src/assets/styles/header-dron.scss
@@ -5,6 +5,19 @@
   padding-right: var(--page-side-fields);
   background-color: rgba(255,255,255,0.95);
   z-index: 50;
+  .header__call-svg{
+    background-color: #fff;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    svg {
+      width: 10px;
+      height: 10px;
+    }
+  }
   .header-menu__text {
     min-width: 7.5ch;
     text-align: right;
