--- a/src/pug/components/lang/lang.scss
+++ b/src/pug/components/lang/lang.scss
@@ -25,6 +25,7 @@
     transition: all 0.3s;
     transition: transform .7s var(--in),
     opacity .25s;
+    text-transform: uppercase;
     
     @include from(1441px) {
       margin: 0 vw(20);
@@ -45,7 +46,7 @@
 
     &::before {
       position: absolute;
-      bottom: -5px;
+      bottom: -2px;
       left: 0;
       display: flex;
       height: 1px;
