--- a/src/assets/styles/header-dron.scss
+++ b/src/assets/styles/header-dron.scss
@@ -22,6 +22,11 @@
     min-width: 7.5ch;
     text-align: right;
   }
+  @include to(575px){
+    .header__call-svg {
+      display: none;
+    }
+  }
 }
 @include from(951px){
   .header__call-form-mobile {
@@ -85,4 +90,5 @@
     padding-left: 0;
     padding-right: 0;
   }
+  
 }
