contacts page add

--- a/src/assets/styles/pages/leisure-page.scss
+++ b/src/assets/styles/pages/leisure-page.scss
@@ -46,7 +46,7 @@ symbol.active path {
     transform: translateX(10px);
   } 
   &__canvas-wrap {
-    margin-top: calc(var(--header-h) * -1);
+    margin-top: calc(var(--header-h) * -1 - 60px);
     margin-right: calc(var(--page-side-fields) * -1);
     width: calc(65% + var(--page-side-fields));
     /* 60 px - высота хлебных кроше*/
