--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -1,5 +1,6 @@
 header.header.brd
-  +img('logo.svg').header__logo
+  a(href="index.html").header__logo
+    +img('logo.svg')
   ul.header__social
     each val in ['facebook', 'instagram']
       li
