mainscreen desktop add

--- a/src/assets/styles/standart-elements.scss
+++ b/src/assets/styles/standart-elements.scss
@@ -300,3 +300,16 @@ body {
     border: 1px solid var(--color-technology);
   }
 }
+
+.blue {
+  color: var(--color-design);
+}
+.green {
+  color: var(--color-living);
+}
+.red {
+  color: var(--color-art);
+}
+.yellow{
+  color: var(--color-architecture);
+}
